20070724
 - (tim) [openssh.xml.in] make FMRI match what package scripts use.
 - (tim) [openbsd-compat/regress/closefromtest.c] Bug 1345: fix open() call.
   Report/patch by David.Leonard AT quest.com

20070628
 - (djm) bz#1325: Fix SELinux in permissive mode where it would
   incorrectly fatal() on errors. patch from cjwatson AT debian.org;
   ok dtucker

20070625
 - (dtucker) OpenBSD CVS Sync
   - djm@cvs.openbsd.org 2007/06/13 00:21:27
     [scp.c]
     don't ftruncate() non-regular files; bz#1236 reported by wood AT
     xmission.com; ok dtucker@
   - djm@cvs.openbsd.org 2007/06/14 21:43:25
     [ssh.c]
     handle EINTR when waiting for mux exit status properly
   - djm@cvs.openbsd.org 2007/06/14 22:48:05
     [ssh.c]
     when waiting for the multiplex exit status, read until the master end
     writes an entire int of data *and* closes the client_fd; fixes mux
     regression spotted by dtucker, ok dtucker@
   - djm@cvs.openbsd.org 2007/06/19 02:04:43
     [atomicio.c]
     if the fd passed to atomicio/atomiciov() is non blocking, then poll() to
     avoid a spin if it is not yet ready for reading/writing; ok dtucker@
   - dtucker@cvs.openbsd.org 2007/06/25 08:20:03
     [channels.c]
     Correct test for window updates every three packets; prevents sending
     window updates for every single packet.  ok markus@
   - dtucker@cvs.openbsd.org 2007/06/25 12:02:27
     [atomicio.c]
     Include <poll.h> like the man page says rather than <sys/poll.h>.  ok djm@
 - (dtucker) [atomicio.c] Test for EWOULDBLOCK in atomiciov to match
   atomicio.
 - (dtucker) [atomicio.c configure.ac openbsd-compat/Makefile.in
   openbsd-compat/bsd-poll.{c,h} openbsd-compat/openbsd-compat.h]
   Add an implementation of poll() built on top of select(2).  Code from
   OpenNTPD with changes suggested by djm.  ok djm@

20070614
 - (dtucker) [cipher-ctr.c umac.c openbsd-compat/openssl-compat.h] Move the
   USE_BUILTIN_RIJNDAEL compat goop to openssl-compat.h so it can be