@@ -2,6 +2,8 @@
  - (tim) [openssh.xml.in] make FMRI match what package scripts use.
  - (tim) [openbsd-compat/regress/closefromtest.c] Bug 1345: fix open() call.
    Report/patch by David.Leonard AT quest.com
+ - (tim) [buildpkg.sh.in openssh.xml.in] Allow more flexibility where smf(5)
+   files are installed.
 
 20070628
  - (djm) bz#1325: Fix SELinux in permissive mode where it would
@@ -3114,4 +3116,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4713 2007/07/25 03:54:09 tim Exp $
+$Id: ChangeLog,v 1.4714 2007/07/25 04:16:07 tim Exp $
